# Language_Recognition

./: CMakeLists.txt
config/tessdata/: ara.traineddata  configs  deu.traineddata  eng.traineddata  fra.traineddata  ita.traineddata  osd.traineddata  por.traineddata  rus.traineddata  spa.traineddata  tessconfigs  tha.traineddata  tur.traineddata
inc/: cmd_parser.h  csv_parser.h  csv_utils.h  data_struct.h  ocr_processor.h  pdf_generator.h  thread_pool.h  udisk_handler.h
src/: Language_main.cpp  cmd_parser.cpp  csv_parser.cpp  ocr_processor.cpp  pdf_generator.cpp  thread_pool.cpp  udisk_handler.cpp
